to_move/myshinyapp-fe-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myshiny-app-ingress
  namespace: myshiny-app
  labels:
    app: myshiny-app-fe
    env: prod
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: doks-cert
spec:
  tls:
  - hosts:
    - myshiny-app.doks.myshiny.space
    secretName: myshiny-app-tls
  rules:
  - host: "myshiny-app.doks.myshiny.space"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: myshiny-app-fe-service
            port:
              number: 80
